# vending-machine

./: README.md  docker-compose.yml
backend/: Cargo.toml
backend/src/: config.rs  error.rs  main.rs
backend/src/api/: currency_handler.rs  mod.rs  product_handler.rs  purchase_handler.rs  transaction_handler.rs
backend/src/domain/: change.rs  currency.rs  mod.rs  product.rs  transaction.rs
backend/src/repository/: currency_repo.rs  mod.rs  product_repo.rs  transaction_repo.rs
backend/src/service/: currency_service.rs  mod.rs  product_service.rs  purchase_service.rs
docker/: backend.Dockerfile  frontend.Dockerfile  init.sql
frontend/: jest.config.js  package.json
frontend/src/__tests__/: api.test.ts  vending-logic.test.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/admin/: page.tsx
frontend/src/lib/: api.ts
frontend/src/types/: index.ts
